# backend/src/routes/rohligpl.routes.js
@@ -3,16 +3,14 @@ import express from 'express';
 const cors = require('cors');
 
 import { verifyLocalSystem } from '../middlewares/verifyLocalSystem';
-import { datachangeController } from '../controllers';
+import { rohligPlController } from '../controllers';
 
 const router = express.Router();
-
 router.use(cors());
-
 router.use(express.json());
-
 router.use(verifyLocalSystem);
 
-router.get('/shipments', datachangeController.importShipments);
-router.put('/statuses', datachangeController.exportStatuses);
+router.get('/shipments', rohligPlController.importShipments);
+router.put('/statuses', rohligPlController.exportStatuses);
+
 export default router;
